Re-Haciendo el juego de nuevo

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,22 +1,21 @@
 [application]
 
-name="Unraveling Challenge"
-main_scene="res://scenes/main-screens/splash.tscn"
+name="Unraveling-Challenge"
 icon="res://icon.png"
 
 [autoload]
 
-global="*res://src/singletons/global.gd"
-calc="*res://src/singletons/calc.gd"
+Global="*res://src/Singletons/Global.gd"
+Calc="*res://src/Singletons/Calc.gd"
 
 [display]
 
-test_width=640
-test_height=480
-stretch_mode="viewport"
-stretch_aspect="keep"
 width=1280
 height=720
+test_width=640
+test_height=360
+stretch_mode="viewport"
+stretch_aspect="keep"
 
 [input]
 
